--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -7,7 +7,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>{% block title %}{% endblock title %} – Биржа Услуг</title>
+  <title>{% block title %}{% endblock title %} – AutoExpert</title>
   <link rel="stylesheet" type="text/css" href="{% static 'styles.css' %}">
   {% if not debug %}
     <script async src="https://stats.hazadus.ru/script.js" data-website-id="3cab6bfb-b194-4677-9e10-0841ab0f6df1"></script>
@@ -21,26 +21,32 @@
       <div class="h-16 shrink-0 bg-gray-300 w-fullshadow flex items-center">
         <!-- App title -->
         <div class="flex mx-4">
-          <svg class="mr-3 h-8 w-8 text-blue-600" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24"><path fill="currentColor" d="M12 9L8.5 5.5L12 2l3.5 3.5zM1 20v-4q0-.85.588-1.425T3 14h3.275q.5 0 .95.25t.725.675q.725.975 1.788 1.525T12 17q1.225 0 2.288-.55t1.762-1.525q.325-.425.763-.675t.912-.25H21q.85 0 1.425.575T23 16v4h-7v-2.275q-.875.625-1.888.95T12 19q-1.075 0-2.1-.337T8 17.7V20zm3-7q-1.25 0-2.125-.875T1 10q0-1.275.875-2.137T4 7q1.275 0 2.138.863T7 10q0 1.25-.862 2.125T4 13m16 0q-1.25 0-2.125-.875T17 10q0-1.275.875-2.137T20 7q1.275 0 2.138.863T23 10q0 1.25-.862 2.125T20 13"/></svg>
-          <a href="{% url "core:index" %}" class="text-2xl text-gray-900">Биржа Услуг</a>
+          <a href="{% url 'home' %}">
+            <img
+                    src="{% static '../static/img/logo-auto.svg' %}"
+                    class="mr-3 h-8 w-8"
+                    alt="AutoExpert"
+            />
+          </a>
+          <a href="{% url "core:index" %}" class="text-2xl text-gray-900">AutoExpert</a>
         </div>
 
         <!-- Menu -->
         <div class="flex-1 flex justify-center items-center">
           <!-- Переключение покупатель / продавец -->
-          <a class="text-center {% if user_mode == 'buyer' %}bg-gray-200 font-medium{% else %}hover:bg-gray-200 font-light{% endif %} p-2 mx-0.5 rounded-lg" href="{% url 'exchange:set_user_mode' %}?mode=buyer&redirect_to={{ request.path }}">Я покупатель</a>
-          <a class="text-center mr-4 {% if user_mode == 'seller' %}bg-gray-200 font-medium{% else %}hover:bg-gray-200 font-light{% endif %} p-2 mx-0.5 rounded-lg" href="{% url 'exchange:set_user_mode' %}?mode=seller&redirect_to={{ request.path }}">Я продавец</a>
+          <a class="text-center {% if user_mode == 'buyer' %}bg-gray-200 font-medium{% else %}hover:bg-gray-200 font-light{% endif %} p-2 mx-0.5 rounded-lg" href="{% url 'exchange:set_user_mode' %}?mode=buyer&redirect_to={{ request.path }}">Я клиент</a>
+          <a class="text-center mr-4 {% if user_mode == 'seller' %}bg-gray-200 font-medium{% else %}hover:bg-gray-200 font-light{% endif %} p-2 mx-0.5 rounded-lg" href="{% url 'exchange:set_user_mode' %}?mode=seller&redirect_to={{ request.path }}">Я эксперт</a>
           {% if user.is_authenticated %}
             {% if user_mode == 'buyer' %}
-              <!-- "Я покупатель" -->
+              <!-- "Я клиент" -->
               <!-- Проекты пользователя -->
               <a class="text-center p-2 hover:bg-gray-200 mx-0.5 rounded-lg font-light" href="{% url 'projects:my_list' %}">Мои проекты</a>
               <!-- Полный каталог услуг -->
-              <a class="p-2 hover:bg-gray-200 mx-0.5 rounded-lg font-light" href="{% url 'services:list' %}">Услуги</a>
+              <a class="p-2 hover:bg-gray-200 mx-0.5 rounded-lg font-light" href="{% url 'services:list' %}">Биржа</a>
               <!-- То, что заказал пользователь -->
               <a class="p-2 hover:bg-gray-200 mx-0.5 rounded-lg font-light" href="{% url 'orders:list' %}">Заказы</a>
             {% else %}
-              <!-- "Я продавец" -->
+              <!-- "Я эксперт" -->
               <!-- Услуги, которые предлагает пользователь -->
               <a class="text-center p-2 hover:bg-gray-200 mx-0.5 rounded-lg font-light" href="{% url 'services:my_list' %}">Мои услуги</a>
               <!-- "Биржа" - полный каталог проектов -->
@@ -49,10 +55,10 @@
               <a class="p-2 hover:bg-gray-200 mx-0.5 rounded-lg font-light" href="{% url 'orders:list' %}">Заказы</a>
             {% endif %}
             <!-- Рубрики -->
-            <a class="p-2 hover:bg-gray-200 mx-0.5 rounded-lg font-light" href="{% url 'exchange:category_list' %}">Рубрики</a>
+            <a class="p-2 hover:bg-gray-200 mx-0.5 rounded-lg font-light" href="{% url 'exchange:category_list' %}">Услуги</a>
           {% else %}
             <!-- Публичные разделы сайта -->
-            <a class="p-2 hover:bg-gray-200 mx-0.5 rounded-lg font-light" href="{% url 'exchange:category_list' %}">Рубрики</a>
+            <a class="p-2 hover:bg-gray-200 mx-0.5 rounded-lg font-light" href="{% url 'exchange:category_list' %}">Услуги</a>
             <a class="p-2 hover:bg-gray-200 mx-0.5 rounded-lg font-light" href="{% url 'services:list' %}">Услуги</a>
             <a class="p-2 hover:bg-gray-200 mx-0.5 rounded-lg font-light" href="{% url 'projects:list' %}">Биржа</a>
           {% endif %}
