--- a/src/templates/services/service_list.html
+++ b/src/templates/services/service_list.html
@@ -22,7 +22,7 @@
       <!-- Left column 1/3 - filters -->
       <div class="col-span-3 flex flex-col">
         <div class="p-4 bg-gray-100 rounded-md shadow-md">
-          <h2 class="text-xl font-medium mb-2">Рубрики</h2>
+          <h2 class="text-xl font-medium mb-2">Услуги</h2>
           <ul>
             <li><a href="{% url 'services:list' %}" class="hover:underline">Все</a></li>
             {% for cat in categories %}
